# mysql-slowlog-analyzer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
examples/: read_duckdb.rs  read_polars.rs
migrations/: 20230117151346_queries.sql  20230117151416_query_calls.sql  20230117151431_query_call_stats.sql  20230117151451_query_call_details.sql  20230124105855_query_call_session.sql  20230126141856_query_objects.sql  20230203004346_query_sql_type_column.sql  20230224201135_drop-query_call_details.sql  20230224201204_create-query_call_context.sql  init.sql
nu/: AGENTS.md  slowlog.nu
src/: AGENTS.md  aggregate.rs  arrow.rs  arrow2.rs  db.rs  dirs.rs  lib.rs  main.rs  parquet.rs  types.rs
