[package]
name = "mysql-slowlog-analyzer"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow2 = { version = "0.16.0", features = ["io_parquet", "io_parquet_compression",  "io_parquet_snappy"] }
async-compat = "0.2.1"
async-stream = "0.3.3"
env_logger = "0.10.0"
bytes = "1.4.0"
directories = "4.0.1"
nom = "7.1.1"
mysql-slowlog-parser = { git = "https://github.com/soulstompp/mysql-slowlog-parser", branch="development" }
rayon = "1.7.0"
sha2 = "0.10.6"
sqlx = {version = "0.6.2", features = ["macros", "runtime-tokio-native-tls", "sqlite", "time"]}
thiserror = "1.0.38"
time = {version = "0.3.17", features = ["parsing"]}
tokio = {version = "1.24.1", features = ["bytes", "macros", "io-std", "test-util", "rt-multi-thread"]}
tokio-util = {version = "0.7.7", features = ["codec"]}
futures = "0.3.25"
# Other dependencies for the package
polars = { version = "0.27.2", features = ["default", "dtype-struct", "lazy", "parquet", "decompress-fast"], optional = true }
opentelemetry = {version = "0.18.0", optional = true }
opentelemetry-otlp = {version = "0.11.0", optional = true }

[features]
read_polars = ["polars"]
otlp = ["opentelemetry", "opentelemetry-otlp"]

[[example]]
name = "read_polars"
required-features = ["read_polars"]
