[package]
name = "mysql-slowlog-analyzer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "slowlog"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "4.0.1"
mysql-slowlog-parser = { version = "0.5.0" }
winnow_datetime = { version = "0.3.0", features = ["time"] }
polars = { version = "0.46.0", features = ["parquet", "lazy", "dtype-struct"] }
sha2 = "0.10.6"
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["bytes", "macros", "io-std", "test-util", "rt-multi-thread"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
futures = "0.3.25"
opentelemetry = { version = "0.18.0", optional = true }
opentelemetry-otlp = { version = "0.11.0", optional = true }

[features]
otlp = ["opentelemetry", "opentelemetry-otlp"]
